PyMaker/datas/object2/RawHTML/i16401/Python_DOC_referPages.try-to-run-this-progrmmer-console-in-python-but-show-me-error.txt
<div class="post-text" itemprop="text">
<p>I am beginner in python. I want to run this programmer in console but it's show me error what wrong in it.</p>
<pre><code>&gt;&gt;&gt; def fib(n):
...     a, b = 0, 1
...     while a &lt; n:
...             print (a, end=' ')
  File "&lt;stdin&gt;", line 4
    print (a, end=' ')
                  ^
SyntaxError: invalid syntax
</code></pre>
<p>my actual program, which i want to run:</p>
<pre><code>&gt;&gt;&gt; def fib(n):
...     a, b = 0, 1
...     while a &lt; n:
...         print(a, end=' ')
...         a, b = b, a+b
...     print()
&gt;&gt;&gt; fib(1000)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You are trying to run a Python3 code in Python2. The <a href="https://docs.python.org/2/reference/simple_stmts.html#print" rel="nofollow noreferrer">Python2 <code>print</code></a> is a keyword and just prints what's given, whereas the <a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow noreferrer">Python3 <code>print</code></a> is a function with some additional parameters. <a href="https://docs.python.org/2/library/functions.html#print" rel="nofollow noreferrer">Python3 <code>print</code> was backported to Python2 and you can made it available using <code>from __future__ import print_function</code></a>:</p>
<pre><code>&gt;&gt;&gt; from __future__ import print_function
&gt;&gt;&gt; def fib(n):
...     a, b = 0, 1
...     while a &lt; n:
...         print(a, end=' ')
...         a, b = b, a+b
...     print()
... 
&gt;&gt;&gt; fib(5)
0 1 1 2 3 
</code></pre>
<p>In plain Python2 it would look like this:</p>
<pre><code>&gt;&gt;&gt; def fib(n):
...     a, b = 0, 1
...     while a &lt; n:
...         print a, ' '
...         a, b = b, a + b
...     print
... 
&gt;&gt;&gt; fib(5)
0  
1  
1  
2  
3 
</code></pre>
<p>Unfortunately, Python2 <code>print</code> writes a newline at the end if you don't print a dot (<code>print 1, 'something', '.'</code>). See <a href="https://stackoverflow.com/questions/493386/how-to-print-in-python-without-newline-or-space">How to print without newline or space?</a> for ways to go around it.</p>
<p>Or you could just store the results and then concatenate and print them at once, e.g.:</p>
<pre><code>&gt;&gt;&gt; def fib(n):
...     a, b = 0, 1
...     results = []
...     while a &lt; n:
...         result.append(a)
...         a, b = b, a + b
...     print ' '.join([str(r) for r in results])
... 
&gt;&gt;&gt; fib(5)
0 1 1 2 3
</code></pre>
</div>
<span class="comment-copy">It looks like you're running Python 3 code in Python 2.  Either install Python 3, or find some tutorials/sample code that uses Python 2.</span>
<span class="comment-copy">You could also use <code>from __future__ import print_function</code> to make this particular example run. There may be other Python 3.x specific code in the example that isn't backported, though.</span>
<span class="comment-copy">If i want to create a programmer in python 2 then how we can do ?</span>
<span class="comment-copy">@Harman Updated with plain Python2 approach.</span>
